tests/ui/const-generics/mgca/unmarked-free-const.stderr
error: use of `const` in the type system not defined as `type const`
  --> $DIR/unmarked-free-const.rs:9:18
   |
LL | const N: usize = 4;
   | - help: add `type` before `const` for `N`: `type`
...
LL |     let x = [(); N];
   |                  ^

error: aborting due to 1 previous error

